--- a/Style/style.css
+++ b/Style/style.css
@@ -7,7 +7,7 @@ body{
 h1{
     text-align: center;
     font-size: 5.0em;
-    padding: 50px 50px 50px 50px;
+    padding: 30px 50px 30px 50px;
     background-image: url(../Images/background_Punkte_weicher.jpg);
     background-size: 100%;
     margin-top: 0px;
@@ -34,28 +34,29 @@ h4{
     font-size: 1.5em;
 }
 
-button{
-    position: center ;
-    margin-left: 190px;
-    margin-right: 170px;
-    background-color:lightsalmon;
-    opacity: 70%; 
-}
 
 #Start{
-    margin-left: 200px;
+    position: center ;
+    margin-left: 170px;
+    margin-right: 150px;
     background-color: rgb(171, 253, 171); 
     opacity: 80%;
     font-size: medium;
 }
 
 #Score{
+    position: center ;
+    margin-left: 170px;
+    margin-right: 150px;
     background-color:lightsalmon;
     opacity: 80%;
     font-size: medium;
 }
 
 #Admin{
+    position: center ;
+    margin-left: 170px;
+    margin-right: 150px;
     background-color:paleturquoise;
     opacity: 80%;
     font-size: medium;
@@ -69,29 +70,30 @@ img{
 }
 div{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 #BackStartseite{
     background-color:lightpink;
     opacity: 90%;
     font-size: medium;
+    float: right;
     position: sticky;
     top: 0;
-    float: right;
+    
     height: 2em;
     border-radius: 5px;
-    margin-left: 0px;
-    margin-right: 0px;
+    
 
 }
 #Löschen{
     background-image: url(../Images/Mülleimer.png);
     background-color: rgba(252, 4, 4, 0.623);
     background-size: 100%;
+    height: 60px;
     width: 70px ;
     float: right;
-    padding-left: 10px;
+   
     
 }
 #Bestätigung{
@@ -100,12 +102,11 @@ div{
 
 table, tr, td, th{
     justify-content: center;
+    width: 950px;
+    
 }
 
-#Spieldauer{
-    float: right;
-    padding-right: 20px;
-}
+
 #PlaceholderDauer{
     float: right;
     padding-right: 20px;
@@ -115,6 +116,7 @@ table, tr, td, th{
     border-collapse: collapse;
     padding: 10px 20px 10px 20px;
     text-align: left;
+    
 }
 
 thead{
@@ -123,6 +125,7 @@ thead{
 }
 video{
     float: right;
+    width: 40%;
     margin-top: 0px;
 }
 .Memory img{
@@ -132,10 +135,58 @@ video{
 }
 
 .Memory table , th, td, tr{
-    border: none;
+    position: center;
+    border: none;  
 }
-
 
 .Rückseite{
     position: absolute;
 }
+
+
+#KartenUmdrehen {
+    position: fixed;
+    font-size: larger;
+    padding: 10px 10px 10px 10px;
+    float: right;
+    margin-left: 1000px;
+    margin-top: 0px;
+    background-color:cornflowerblue;
+    
+}
+#Spieldauer {
+    
+    float: right;
+    background-color: lightslategray;
+    font-size: larger;
+    margin-right: 50px;
+    padding: 10px 10px 10px 10px; 
+}
+.Einstellungen tr {
+    width: 1000px;
+    
+}
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1024px) {
+    body, img, video{
+        width: 90%;
+  
+    }
+}
+@media screen  and (max-width: 599px){
+    body, img, video{
+        width: 100%;
+    }
+}
+   
+
+
+
