--- a/Style/style.css
+++ b/Style/style.css
@@ -77,11 +77,12 @@ div{
     background-color:lightpink;
     opacity: 90%;
     font-size: medium;
-    float: right;
-    position: sticky;
+    float: left;
+    position: fixed;
     top: 0;
     height: 2em;
     border-radius: 5px;
+  
     
 
 }
@@ -91,12 +92,16 @@ div{
     background-size: 100%;
     height: 60px;
     width: 70px ;
-    float: right;  
-    
+    float: right;   
+}
+#Hinzufuegen{
+    margin-bottom: 30px;
+    background-color: rgb(179, 245, 179);
 }
 
 #Abschicken{
     margin-top: 50px;
+    background-color: rgb(179, 245, 179);
 }
 
 table, tr, td, th{
@@ -137,6 +142,7 @@ video{
 .Memory table , th, td, tr{
     position: center;
     border: none;  
+    
 }
 
 .Bild{
@@ -185,7 +191,7 @@ video{
     body{
         width: 100%;
     }
-    table{
+    table.body{
         width: 50%;
     }
     h1, h2, h3{
@@ -193,6 +199,10 @@ video{
     }
     h4{
         font-size: 90%;
+    }
+
+    h5{
+        font-size: 70%;
     }
     #Start{
         width: 50%;
@@ -218,6 +228,17 @@ video{
         font-size: smaller;
         
     }
+    video{
+        margin-bottom: 20px;
+    }
+    #Spieldauer{
+        font-size: small;
+    }
+
+    .Memory{
+        size: 50%
+
+    };
     
 }
    
