--- a/Style/style.css
+++ b/Style/style.css
@@ -1,18 +1,18 @@
 
 body{
     background-color: rgb(240, 240, 240); 
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: Arial, Helvetica, sans-serif;  
 }
+
 h1{
     text-align: center;
     font-size: 5.0em;
     padding: 30px 50px 30px 50px;
     background-image: url(../Images/background_Punkte_weicher.jpg);
     background-size: 100%;
-    margin-top: 0px;
-    
+    margin-top: 0px; 
 }  
+
 h2{
     
     text-align: center;
@@ -21,7 +21,6 @@ h2{
     padding: 20px 20px 20px 20px;
     background-size: 100%;
     margin-top: 0px; 
-    
 }
 
 h3{ 
@@ -32,6 +31,7 @@ h3{
 h4{
     
     font-size: 1.5em;
+    text-align: center;
 }
 
 
@@ -70,7 +70,6 @@ img{
 }
 div{
     display: flex;
-    justify-content: space-between;
 }
 
 #BackStartseite{
@@ -81,15 +80,22 @@ div{
     top: 0;
     height: 2em;
     border-radius: 5px;
+    text-align: left;
+
 }
 #Spielzeit{
     background-color: rgb(202, 197, 196);
     padding: 10px;
 }
+#bilderDB{
+    flex-direction: column;
+    width: 50%;
+}
+
 #Loeschen{
     margin-bottom: 30px;
     background-image: url(../Images/Mülleimer.png);
-    background-color: rgba(252, 4, 4, 0.623);
+    background-color: rgba(252, 4, 4, 0.493);
     background-size: 100%;
     height: 60px;
     width: 70px;  
@@ -97,13 +103,13 @@ div{
 
 #Hinzufuegen{
     margin-bottom: 30px;
-    background-color: rgb(179, 245, 179);
+    background-color: rgb(195, 243, 195);
     height: 60px;
     width: 80px;  
 }
 #Anzeigen{
     margin-bottom: 30px;
-    background-color:lightskyblue;
+    background-color:rgb(176, 220, 248);
     height: 60px;
     width: 80px;  
 }
@@ -152,8 +158,9 @@ video{
 .Memory table , th, td, tr{
     position: center;
     border: none;  
-    
+    text-align: center;
 }
+
 
 .Bild{
     position: absolute;
@@ -184,6 +191,10 @@ video{
     width: 1000px;
     
 }
+form{
+    text-align: center;
+}
+
 
 
 
@@ -213,6 +224,7 @@ video{
 
     h5{
         font-size: 70%;
+       
     }
     #Start{
         width: 50%;
