--- a/Style/style.css
+++ b/Style/style.css
@@ -293,6 +293,13 @@ thead{
     #BackStartseite{
         font-size: smaller;
     }
+    .Highscore table , th, td, tr{
+        padding: 5px 15px 5px 15px;
+    }
+    .Memory img{
+        width: 50px;
+        height: 50px;
+    }
 
     video{
         margin-top: 30px;
